unified PipelineVariableTypesEnum etc